--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -262,7 +262,8 @@
                           style="position:absolute; bottom: 0px; right: 15px; z-index: 1; cursor: pointer;">
                           <div class="rounded bg-dark text-white p-2 align-items-center">
                             <div class="mb-2" style="width: 100px;">
-                              <h6 class="m-0 p-0 text-truncate font-weight-light">Dolores Hidalgo Cunaasasdasd sd s d </h6>
+                              <h6 class="m-0 p-0 text-truncate font-weight-light">Dolores Hidalgo Cunaasasdasd sd s d
+                              </h6>
                               <p class="m-0 text-truncate small font-weight-light">México</p>
                             </div>
                             <div class="text-center d-flex justify-content-center align-items-center" style="gap: 0;">
@@ -283,133 +284,181 @@
           </div>
         </div>
       </div>
+    </div>
+  </div>
 
-      <div class="modal fade" id="saveFieldModal" data-backdrop="static">
-        <div class="modal-dialog">
-          <form id="fieldForm" class="modal-content">
-            <div class="modal-header">
-              <h5 class="modal-title">Guardar lote</h5>
-            </div>
-            <div class="modal-body">
-              <div class="form-row">
-                <div class="form-group col">
-                  <label class="form-label">Nombre del lote *</label>
-                  <input id="fieldName" type="text" class="form-control" maxlength="80"
-                    placeholder="Escribe el nombre del lote" autocomplete="off" required>
-                </div>
-              </div>
-              <div class="form-row">
-                <div class="form-group col">
-                  <label class="form-label">Cultivo</label>
-                  <select id="fieldCrop" class="form-control" style="width: 100%" data-allow-clear="true"
-                    data-placeholder="Selecciona un cultivo">
-                    <option></option>
-                    <option th:each="crop : ${crops}" th:value="${crop.id}" th:text="${crop.name}">
-                    </option>
-                  </select>
-                </div>
-              </div>
-              <div class="form-row mb-2">
-                <div class="form-group col">
-                  <label class="form-label">Fecha de siembra</label>
-                  <input id="fieldPlantingDate" type="text" class="form-control" placeholder="dd/MM/yyyy"
-                    autocomplete="off">
-                </div>
-                <div class="form-group col">
-                  <label class="form-label">Fecha de cosecha</label>
-                  <input id="fieldHarvestDate" type="text" class="form-control" placeholder="dd/MM/yyyy"
-                    autocomplete="off">
-                </div>
-              </div>
-              <hr class="mb-0">
-              <div class="text-center mb-3" style="margin-top: -11px;">
-                <b class="bg-white px-2">Borde del lote</b>
-              </div>
-              <div class="form-row">
-                <div class="form-group col">
-                  <label class="form-label" for="fieldBorderColor">Color de borde *</label>
-                  <input id="fieldBorderColor" type="text" class="form-control" value="#000000" autocomplete="off"
-                    required>
-                </div>
-                <div class="form-group col">
-                  <label class="form-label">Ancho de borde *</label>
-                  <input id="fieldBorderSize" type="number" class="form-control" min="1" max="10" autocomplete="off"
-                    required>
-                </div>
-              </div>
-            </div>
-            <div class="modal-footer">
-              <button id="fmsCancelBtn" type="button" class="btn btn-default" data-dismiss="modal">Cancelar</button>
-              <button id="fmsSaveBtn" type="submit" class="btn btn-success">
-                Guardar lote
-              </button>
-            </div>
-          </form>
+  <div class="modal fade" id="saveFieldModal" data-backdrop="static">
+    <div class="modal-dialog">
+      <form id="fieldForm" class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title">Guardar lote</h5>
         </div>
-      </div>
-
-      <div class="modal fade" id="deleteFieldModal" data-backdrop="static">
-        <div class="modal-dialog">
-          <form id="deleteFieldForm" class="modal-content">
-            <div class="modal-header">
-              <h5 class="modal-title">Eliminar lote</h5>
+        <div class="modal-body">
+          <div class="form-row">
+            <div class="form-group col">
+              <label class="form-label">Nombre del lote *</label>
+              <input id="fieldName" type="text" class="form-control" maxlength="80"
+                placeholder="Escribe el nombre del lote" autocomplete="off" required>
             </div>
-            <div class="modal-body py-4">
-              <div class="d-flex align-items-center">
-                <div class="far fa-trash-alt display-3 text-danger"></div>
-                <div class="ml-3">
-                  <div class="text-large">¿Está seguro de eliminar el lote?</div>
-                  <div class="text-big ml-1"><b id="deleteFieldName"></b></div>
-                  <div class="text-danger ml-1 mt-2">¡Esta acción no puede ser revertida!</div>
-                </div>
+          </div>
+          <div class="form-row">
+            <div class="form-group col">
+              <label class="form-label">Cultivo</label>
+              <select id="fieldCrop" class="form-control" style="width: 100%" data-allow-clear="true"
+                data-placeholder="Selecciona un cultivo">
+                <option></option>
+                <option th:each="crop : ${crops}" th:value="${crop.id}" th:text="${crop.name}">
+                </option>
+              </select>
+            </div>
+          </div>
+          <div class="form-row mb-2">
+            <div class="form-group col">
+              <label class="form-label">Fecha de siembra</label>
+              <input id="fieldPlantingDate" type="text" class="form-control" placeholder="dd/MM/yyyy"
+                autocomplete="off">
+            </div>
+            <div class="form-group col">
+              <label class="form-label">Fecha de cosecha</label>
+              <input id="fieldHarvestDate" type="text" class="form-control" placeholder="dd/MM/yyyy" autocomplete="off">
+            </div>
+          </div>
+          <hr class="mb-0">
+          <div class="text-center mb-3" style="margin-top: -11px;">
+            <b class="bg-white px-2">Borde del lote</b>
+          </div>
+          <div class="form-row">
+            <div class="form-group col">
+              <label class="form-label" for="fieldBorderColor">Color de borde *</label>
+              <input id="fieldBorderColor" type="text" class="form-control" value="#000000" autocomplete="off" required>
+            </div>
+            <div class="form-group col">
+              <label class="form-label">Ancho de borde *</label>
+              <input id="fieldBorderSize" type="number" class="form-control" min="1" max="10" autocomplete="off"
+                required>
+            </div>
+          </div>
+        </div>
+        <div class="modal-footer">
+          <button id="fmsCancelBtn" type="button" class="btn btn-default" data-dismiss="modal">Cancelar</button>
+          <button id="fmsSaveBtn" type="submit" class="btn btn-success">
+            Guardar lote
+          </button>
+        </div>
+      </form>
+    </div>
+  </div>
+
+  <div class="modal fade" id="deleteFieldModal" data-backdrop="static">
+    <div class="modal-dialog">
+      <form id="deleteFieldForm" class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title">Eliminar lote</h5>
+        </div>
+        <div class="modal-body py-4">
+          <div class="d-flex align-items-center">
+            <div class="far fa-trash-alt display-3 text-danger"></div>
+            <div class="ml-3">
+              <div class="text-large">¿Está seguro de eliminar el lote?</div>
+              <div class="text-big ml-1"><b id="deleteFieldName"></b></div>
+              <div class="text-danger ml-1 mt-2">¡Esta acción no puede ser revertida!</div>
+            </div>
+          </div>
+        </div>
+        <div class="modal-footer">
+          <button id="fmdCancelBtn" type="button" class="btn btn-default" data-dismiss="modal">Cancelar</button>
+          <button id="fmdDeleteBtn" type="submit" class="btn btn-danger">
+            Eliminar lote
+          </button>
+        </div>
+      </form>
+    </div>
+  </div>
+
+  <div class="modal fade" id="weatherModal" data-backdrop="static">
+    <div class="modal-dialog modal-xl">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title">
+            El tiempo
+          </h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">×</button>
+        </div>
+        <div class="modal-body">
+          <div class="card">
+            <div class="row no-gutters row-bordered">
+              <div class="col-12">
+                <h5 class="card-header with-elements border-0">
+                  <span class="card-header-title"><i class="ion ion-md-stats text-primary"></i>&nbsp; Clima</span>
+                  <div class="card-header-elements ml-auto">
+                    <div id="weatherVariablesContainer" class="btn-group btn-group-toggle">
+                      <label class="btn btn-success">
+                        <input type="radio" name="btn-radio" class="weatherVariable"> Temperatura
+                      </label>
+                      <label class="btn btn-default">
+                        <input type="radio" name="btn-radio" class="weatherVariable"> Precipitación
+                      </label>
+                      <label class="btn btn-default">
+                        <input type="radio" name="btn-radio" class="weatherVariable"> Humedad
+                      </label>
+                      <label class="btn btn-default">
+                        <input type="radio" name="btn-radio" class="weatherVariable"> Viento
+                      </label>
+                    </div>
+                  </div>
+                </h5>
               </div>
             </div>
-            <div class="modal-footer">
-              <button id="fmdCancelBtn" type="button" class="btn btn-default" data-dismiss="modal">Cancelar</button>
-              <button id="fmdDeleteBtn" type="submit" class="btn btn-danger">
-                Eliminar lote
-              </button>
+            <hr class="border-light p-0 m-0">
+            <div class="row no-gutters row-bordered">
+              <div class="col-12 px-1 pt-4 pb-0">
+                <div id="weatherChartContainer" style="height: 300px;"></div>
+              </div>
             </div>
-          </form>
-        </div>
-      </div>
-
-      <div class="modal fade" id="weatherModal" data-backdrop="static">
-        <div class="modal-dialog">
-          <div class="modal-content">
-            <div class="modal-header">
-              <h5 class="modal-title">
-                Condiciones meteorológicas
-              </h5>
-              <button type="button" class="close" data-dismiss="modal" aria-label="Close">×</button>
+            <hr class="border-light m-0 p-0">
+            <div class="row no-gutters row-bordered">
+              <div class="col-12">
+                <h5 class="card-header with-elements border-0">
+                  <span class="card-header-title"><i class="ion ion-md-stats text-primary"></i>&nbsp; Pronóstico del
+                    tiempo</span>
+                </h5>
+              </div>
             </div>
-            <div class="modal-body py-4">
-              <h1>Contenido</h1>
+            <hr class="border-light p-0 m-0">
+            <div class="row no-gutters row-bordered">
+              <div class="col-12 px-1 pt-2 pb-0">
+                <img src="img/pronostico.png">
+              </div>
             </div>
           </div>
         </div>
       </div>
+    </div>
+  </div>
 
-      <script src="https://cdn.jsdelivr.net/npm/ol@v9.2.2/dist/ol.js"></script>
-      <script src="https://viglino.github.io/ol-ext/dist/ol-ext.min.js"></script>
-      <script src="https://cdn.jsdelivr.net/npm/geotiff@2.1.3/dist-browser/geotiff.min.js"></script>
-      <script src="vendor/libs/popper/popper.js"></script>
-      <script src="vendor/js/bootstrap.js"></script>
-      <script src="vendor/libs/select2/select2.js"></script>
-      <script src="vendor/libs/select2/select2.js"></script>
-      <script src="vendor/libs/minicolors/minicolors.js"></script>
-      <script src="vendor/libs/toastr/toastr.js"></script>
-      <script src="vendor/libs/bootstrap-datepicker/bootstrap-datepicker.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/ol@v9.2.2/dist/ol.js"></script>
+  <script src="https://viglino.github.io/ol-ext/dist/ol-ext.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/geotiff@2.1.3/dist-browser/geotiff.min.js"></script>
+  <script src="https://code.highcharts.com/highcharts.js"></script>
+  <script src="https://code.highcharts.com/modules/windbarb.js"></script>
 
-      <script src="js/common.js"></script>
-      <script src="js/home.js"></script>
-      <script src="js/measure.js"></script>
-      <script src="js/map.js"></script>
-      <script src="js/fields.js"></script>
-      <script src="js/indices.js"></script>
-      <script src="js/notifications.js"></script>
-      <script src="js/calendar.js"></script>
-      <script src="js/weather.js"></script>
+  <script src="vendor/libs/popper/popper.js"></script>
+  <script src="vendor/js/bootstrap.js"></script>
+  <script src="vendor/libs/select2/select2.js"></script>
+  <script src="vendor/libs/select2/select2.js"></script>
+  <script src="vendor/libs/minicolors/minicolors.js"></script>
+  <script src="vendor/libs/toastr/toastr.js"></script>
+  <script src="vendor/libs/bootstrap-datepicker/bootstrap-datepicker.js"></script>
+
+  <script src="js/common.js"></script>
+  <script src="js/home.js"></script>
+  <script src="js/measure.js"></script>
+  <script src="js/map.js"></script>
+  <script src="js/fields.js"></script>
+  <script src="js/indices.js"></script>
+  <script src="js/notifications.js"></script>
+  <script src="js/calendar.js"></script>
+  <script src="js/weather.js"></script>
 </body>
 
 </html>
